# AroMCP

./: .env.example  .gitignore  CLAUDE.md  DEBUG_MODE_DEMO.md  LICENSE  README.md  TEST_PROMPTS.md  TOOL_GUIDE.md  docker-compose.yml  install.sh  main.py  pyproject.toml  test_conditional_batch.py
.aromcp/servers/: analysis.yaml  build.yaml  filesystem.yaml  standards.yaml  workflow.yaml
.aromcp/workflows/: README.md  analyze:dependencies.yaml  code-standards:enforce.README.md  code-standards:enforce.yaml  hello-world.yaml  schema.json  test:agent-communication.yaml  test:simple.yaml  test:sub-agents.yaml
.claude/commands/: diff:analyze.md  sync-schema.md  workflow:generate.md
docker/: README.md  postgresql-init.sql
docs/: INDIVIDUAL_SERVERS.md
documentation/: CLAUDE-MD-HINT.md  INSTALLATION.md  ai-agent-improvements.md  claude_code.md  simplify-workflow.md
documentation/archive/: README.md
documentation/commands/: generate-eslint-rules.md  generate-standards-and-templates.md  generate-standards.md
documentation/implementation/: code-analysis-tool-generate-command.md  code-analysis-tool-v2-simplified.md  code-analysis-tool-v2.md  code-analysis-tool.md  pagination-implementation.md  standards-design.md  standards-server-v2.md  state-system-plan-phase-3.md  state-system-quick-reference.md  tool-cleanup.md
documentation/issues/: workflow-while-loop-state-sync-issue.md
documentation/usage/: analysis_tools.md  build_tools.md  code_documentation_template.md  filesystem_tools.md
examples/: workflow_phase1_demo.py
implementation/: temporal-workflow-server-design.md  workflow-acceptance-criteria.md
implementation/temporal-workflow-server/: phase-1-core-foundation.md  phase-2-yaml-system.md  phase-3-expression-engine.md  phase-4-temporal-integration.md  phase-5-control-flow.md  phase-6-external-actions.md  phase-7-subagent-interface.md  phase-8-mvp-workflow.md
scripts/: README.md  health-check.py  run-all-servers.sh  run-server.sh  stop-all-servers.sh  validate_workflow.py
servers/analysis/: README.md  main.py  pyproject.toml
servers/filesystem/: README.md  main.py  pyproject.toml
servers/standards/: README.md  main.py  pyproject.toml
servers/workflow/: README.md  main.py  pyproject.toml
shared-claude/agents/: standards-fix-batch-processor.md
shared-claude/commands/: standards:create.md  standards:fix.md  standards:generate.md  standards:update.md  workflow.md
shared-claude/templates/: code-standards-template.md
src/aromcp/: __init__.py  main_server.py
tests/: test_cursor_pagination.py  test_individual_servers.py  test_main_server.py  test_pagination.py  test_server_registration.py  test_workflow_validation.py
tests/analysis_server/: PERFORMANCE_FIXES_SUMMARY.md  README.md  __init__.py  test_advanced_type_resolution_failures.py  test_analyze_component_usage.py  test_analyze_standards_for_rules.py  test_builtin_utility_types.py  test_cache_memory_debug.py  test_cache_memory_fix.py  test_call_graph_construction.py  test_call_graph_performance.py  test_conditional_execution.py  test_cycle_detection.py  test_detect_security_patterns.py  test_extract_api_endpoints.py  test_extract_templates_from_standards.py  test_fastmcp_integration.py  test_find_dead_code.py  test_find_import_cycles.py  test_find_references.py  test_find_unused_code.py  test_focused_advanced_type_resolution.py  test_focused_tool_failures.py  test_function_analysis.py  test_get_function_details_efficiency.py  test_get_relevant_standards.py  test_get_relevant_standards_eslint.py  test_import_tracking.py  test_incremental_analysis.py  test_incremental_basic_change_detection.py  test_integration_phase4.py  test_integration_workflows.py  test_large_scale_performance.py  test_load_coding_standards.py  test_memory_and_caching.py  test_monorepo_basic.py  test_monorepo_shared_types.py  test_monorepo_symbols.py  test_monorepo_workspace.py  test_parse_standard_to_rules.py  (+13 more)
tests/build_server/: test_check_dependencies.py  test_check_typescript.py  test_get_build_config.py  test_lint_project.py  test_parse_lint_results.py  test_run_command.py  test_run_test_suite.py
tests/filesystem_server/: test_diff_operations.py  test_extract_method_signatures.py  test_find_imports_for_files.py  test_find_who_imports.py  test_get_target_files.py  test_list_files.py  test_load_documents_by_pattern.py  test_read_files.py  test_read_files_batch.py  test_security_validation.py  test_write_files.py  test_write_files_batch.py
tests/standards_server/: __init__.py  test_add_hint.py  test_add_rule.py  test_check_updates.py  test_context_detection.py  test_delete.py  test_enhanced_hints_for_file.py  test_hints_for_file.py  test_import_map_generation.py  test_integration_new_flow.py  test_register.py  test_rule_compression.py  test_scoring.py  test_session_management.py  test_storage.py  test_string_parameters.py  test_update_rule.py
tests/utils/: test_json_parameter_middleware.py
tests/workflow_server/: __init__.py  benchmark_phase1.py  test_acceptance_scenario_1_basic_workflow.py  test_acceptance_scenario_2_complex_control_flow.py  test_acceptance_scenario_3_subagent_parallel.py  test_acceptance_scenario_4_error_handling.py  test_acceptance_scenario_5_state_management.py  test_acceptance_scenario_6_validation_edge_cases.py  test_agent_step_processors.py  test_basic_execution.py  test_batched_steps.py  test_client_step_processors.py  test_code_standards_workflow.py  test_complete_subagent_flow.py  test_computed_field_cascading.py  test_computed_field_cascading_comprehensive.py  test_control_flow.py  test_control_flow_comprehensive.py  test_control_flow_implementation.py  test_debug_mode_step_conversion.py  test_debug_tools.py  test_deprecated_step_migration.py  test_end_to_end_scenarios.py  test_enhanced_diagnostics.py  test_error_handling.py  test_error_handling_comprehensive.py  test_execution_engine.py  test_executor.py  test_expression_evaluation_advanced.py  test_expressions.py  test_integration_comprehensive.py  test_missing_coverage.py  test_monitoring_comprehensive.py  test_parallel_execution.py  (+62 more)
(+291 files in other folders)
