[project]
name = "aromcp-analysis"
version = "0.1.0"
description = "AroMCP Analysis Server - Code quality and dependency analysis tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ['py312']