[project]
name = "aromcp-workflow"
version = "0.1.0"
description = "AroMCP Workflow Server - Workflow execution and state management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "pyyaml>=6.0.0",
    "pythonmonkey>=1.1.1",
    "psutil>=5.9.0",
    "jsonschema>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ['py312']